Completion en cours de vérification des déplacement